# Aula08JornadaPy

./: README.md  etl.py  main.py  pyproject.toml
